--- a/main/static/index.html
+++ b/main/static/index.html
@@ -279,50 +279,92 @@
 
               <!-- DIA 1 - TRACK 1-->
               <div class="tab-pane fade in active" id="DayOne-1">
-                <div class="panel-group timeline-schedule" id="panelTimelineOne">
+                {% if paper_list_first %}
+                  <article>
+                   <p>Aún no hay charlas programadas.</p>
+                  </article>
+                {% else %}
+                  <div class="panel-group timeline-schedule" id="panelTimelineOne">
 
-                  <!-- CHARLAS -->
-                  {% for paper in paper_list %}
-                  <div class="panel panel-default">
-                    <div class="speaker-wrapper">
-                      <img src="/media/{{paper.author.1.photo_thumb}}" class="img-responsive img-circle" alt="{{paper.author.1.get_full_name}}" />
-                    </div>
-                    <div class="panel-heading">
-                      <div class="panel-title">
-                        <div class="time"><i class="fa fa-clock-o"></i>
-                          {{paper.start_time|date:"H:i"}}
+                    <!-- CHARLAS DIA 1-->
+                    {% for paper in paper_list_first %}
+                    <div class="panel panel-default">
+                      <div class="speaker-wrapper">
+                        <img src="/media/{{paper.author.1.photo_thumb}}" class="img-responsive img-circle" alt="{{paper.author.1.get_full_name}}" />
+                      </div>
+                      <div class="panel-heading">
+                        <div class="panel-title">
+                          <div class="time"><i class="fa fa-clock-o"></i>
+                            {{paper.start_time|date:"H:i"}}
+                          </div>
+                          <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item{{paper.id}}">
+                            {{paper.title}}
+                            <div class="pull-right fa fa-angle-up"></div>
+                            <div class="pull-right fa fa-angle-down"></div>
+                          </a>
                         </div>
-                        <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item{{paper.id}}">
-                          {{paper.title}}
-                          <div class="pull-right fa fa-angle-up"></div>
-                          <div class="pull-right fa fa-angle-down"></div>
-                        </a>
                       </div>
-                    </div>
 
-                    <div id="item{{paper.id}}" class="panel-collapse collapse in">
-                      <div class="panel-body">
-                        <article>
-                          <p>{{ paper.abstract }}</p>
-                          <p class="author"><a href="{{paper.author.1.twitter}}"><strong><i class="fa fa-user"></i> {{paper.author.1.get_full_name}}</strong></a></p>
-                        </article>
+                      <div id="item{{paper.id}}" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                          <article>
+                            <p>{{ paper.abstract }}</p>
+                            <p class="author"><a href="{{paper.author.1.twitter}}"><strong><i class="fa fa-user"></i> {{paper.author.1.get_full_name}}</strong></a></p>
+                          </article>
+                        </div>
                       </div>
                     </div>
+                    {% endfor %}
+                    <!-- END CHARLAS DIA 1-->
                   </div>
-                  {% endfor %}
-                  <!-- END CHARLAS -->
-
-                </div>
+                {% endif %}
               </div>
               <!-- END DIA 1 - TRACK 1-->
 
               <!-- DIA 1 - TRACK 2 -->
               <div class="tab-pane fade" id="DayOne-2">
-                <article>
-                  <p>Los talleres aún no están confirmados.</p>
-                </article>
+                {% if workshop_list_first %}
+                  <article>
+                   <p>Los talleres aún no están confirmados.</p>
+                  </article>
+                {% else %}
+                  <div class="panel-group timeline-schedule" id="panelTimelineThree">
+
+                    <!-- CHARLAS DIA 1-->
+                    {% for workshop in workshop_list_first %}
+                    <div class="panel panel-default">
+                      <div class="speaker-wrapper">
+                        <img src="/media/{{workshop.expositor.photo_thumb}}" class="img-responsive img-circle" alt="{{workshop.expositor.get_full_name}}" />
+                      </div>
+                      <div class="panel-heading">
+                        <div class="panel-title">
+                          <div class="time"><i class="fa fa-clock-o"></i>
+                            {{workshop.start_time|date:"H:i"}}
+                          </div>
+                          <a data-toggle="collapse" data-parent="#panelTimelineThree" href="#item{{workshop.id}}">
+                            {{workshop.name}}
+                            <div class="pull-right fa fa-angle-up"></div>
+                            <div class="pull-right fa fa-angle-down"></div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div id="item{{workshop.id}}" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                          <article>
+                            <p>{{ workshop.abstract }}</p>
+                            <p class="author"><a href="{{workshop.expositor.twitter}}"><strong><i class="fa fa-user"></i> {{workshop.expositor.get_full_name}}</strong></a></p>
+                          </article>
+                        </div>
+                      </div>
+                    </div>
+                    {% endfor %}
+                    <!-- END CHARLAS DIA 1-->
+                  </div>
+                {% endif %}
               </div>
               <!-- END DIA 1 - TRACK 2 -->
+
             </div>
             <div class="clearfix"></div>
           </div>
@@ -345,17 +387,90 @@
             <div class="tab-content">
               <!-- DIA 2 - TRACK 1 -->
               <div class="tab-pane fade in active" id="DayTwo-1">
-                <article>
-                  <p>Aún no hay charlas programadas.</p>
-                </article>
+              {% if paper_list_second %}
+                  <article>
+                   <p>Aún no hay charlas programadas.</p>
+                  </article>
+                {% else %}
+                  <div class="panel-group timeline-schedule" id="panelTimelineTwo">
+
+                    <!-- CHARLAS DIA 2-->
+                    {% for paper in paper_list_second %}
+                    <div class="panel panel-default">
+                      <div class="speaker-wrapper">
+                        <img src="/media/{{paper.author.1.photo_thumb}}" class="img-responsive img-circle" alt="{{paper.author.1.get_full_name}}" />
+                      </div>
+                      <div class="panel-heading">
+                        <div class="panel-title">
+                          <div class="time"><i class="fa fa-clock-o"></i>
+                            {{paper.start_time|date:"H:i"}}
+                          </div>
+                          <a data-toggle="collapse" data-parent="#panelTimelineTwo" href="#item{{paper.id}}">
+                            {{paper.title}}
+                            <div class="pull-right fa fa-angle-up"></div>
+                            <div class="pull-right fa fa-angle-down"></div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div id="item{{paper.id}}" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                          <article>
+                            <p>{{ paper.abstract }}</p>
+                            <p class="author"><a href="{{paper.author.1.twitter}}"><strong><i class="fa fa-user"></i> {{paper.author.1.get_full_name}}</strong></a></p>
+                          </article>
+                        </div>
+                      </div>
+                    </div>
+                    {% endfor %}
+                    <!-- END CHARLAS DIA 2-->
+                  </div>
+                {% endif %}
               </div>
               <!-- END DIA 2 - TRACK 1 -->
 
+
               <!-- DIA 2 - TRACK 2 -->
               <div class="tab-pane fade" id="DayTwo-2">
-                <article>
-                  <p>Aún no hay talleres programados.</p>
-                </article>
+                {% if workshop_list_second %}
+                  <article>
+                   <p>Los talleres aún no están confirmados.</p>
+                  </article>
+                {% else %}
+                  <div class="panel-group timeline-schedule" id="panelTimelineFour">
+
+                    <!-- TALLERES DIA 1-->
+                    {% for workshop in workshop_list_second %}
+                    <div class="panel panel-default">
+                      <div class="speaker-wrapper">
+                        <img src="/media/{{workshop.expositor.photo_thumb}}" class="img-responsive img-circle" alt="{{workshop.expositor.get_full_name}}" />
+                      </div>
+                      <div class="panel-heading">
+                        <div class="panel-title">
+                          <div class="time"><i class="fa fa-clock-o"></i>
+                            {{workshop.start_time|date:"H:i"}}
+                          </div>
+                          <a data-toggle="collapse" data-parent="#panelTimelineFour" href="#item{{workshop.id}}">
+                            {{workshop.name}}
+                            <div class="pull-right fa fa-angle-up"></div>
+                            <div class="pull-right fa fa-angle-down"></div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div id="item{{workshop.id}}" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                          <article>
+                            <p>{{ workshop.abstract }}</p>
+                            <p class="author"><a href="{{workshop.expositor.twitter}}"><strong><i class="fa fa-user"></i> {{workshop.expositor.get_full_name}}</strong></a></p>
+                          </article>
+                        </div>
+                      </div>
+                    </div>
+                    {% endfor %}
+                    <!-- END TALLERES DIA 1-->
+                  </div>
+                {% endif %}
               </div>
               <!-- DIA 2 - TRACK 2 -->
 
